--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Jaqueline Moreira
 #logo:
-description: "👩🏻‍💻 Hi there! My name is Jaqueline Moreira.  return I have a bachelor's degree in Statistics and an MBA with a specialization in Data Science and Analytics. \I’m a curious and focused number geek,🤓 and I’m looking forward to facing new challenges and improving my skills."
+description: "👩🏻‍💻 Hi there! My name is Jaqueline Moreira." 
+"I have a bachelor's degree in Statistics and an MBA with a specialization in Data Science and Analytics."
+"I’m a curious and focused number geek,🤓 and I’m looking forward to facing new challenges and improving my skills."
 theme: jekyll-theme-minimal
