--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
 title: Jaqueline Moreira
 #logo:
 description: "Hi there! My name is Jaqueline Moreira.  👩🏻‍💻 I have a bachelor's degree in Statistics and an MBA with a specialization in Data Science and Analytics.   I’m a curious and focused number geek,🤓 and I’m looking forward to facing new challenges and improving my skills."
+<p align="left">
+    <a href="https://www.linkedin.com/in/jaqueline-v-moreira">
+        <img 
+            alt="Linkedin" 
+            title="Visite" 
+            src="https://custom-icon-badges.demolab.com/badge/--020122?style=for-the-badge&logo=Linkedin_jaque"
+        />
 theme: jekyll-theme-minimal
