--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Jaqueline Moreira
-#logo:
+logo: "https://i0.wp.com/conre-1.org.br/wp-content/uploads/2016/09/simbolo-estatistica.png?w=382&ssl=1"
 description: "Hi there! My name is Jaqueline Moreira.  👩🏻‍💻 I have a bachelor's degree in Statistics and an MBA with a specialization in Data Science and Analytics.   I’m a curious and focused number geek,🤓 and I’m looking forward to facing new challenges and improving my skills."
 theme: jekyll-theme-minimal
